Renamed Execution Methods for Clarity

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,6 @@
     "moduleResolution": "node",
     "resolveJsonModule": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/Gluify.ts"],
   "exclude": ["node_modules", "dist", "examples", "dev-notes"]
 }
