--- a/package.json
+++ b/package.json
@@ -1,23 +1,36 @@
 {
   "name": "gluify",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "A type-safe pipeline library for TypeScript that glues functions from different libraries together",
-  "main": "dist/Gluify.js",
-  "types": "dist/Gluify.d.ts",
+  "main": "index.js",
+  "types": "index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./index.d.ts",
+      "import": "./index.js",
+      "require": "./index.js"
+    }
+  },
   "files": [
     "dist",
+    "index.js",
+    "index.d.ts",
     "README.md",
     "LICENSE"
   ],
   "scripts": {
     "build": "tsc",
     "prepare": "npm run build",
-    "test": "echo \"Run examples manually for v1.0\" && exit 0",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui",
     "examples:basic": "tsx examples/test-examples.ts",
     "examples:errors": "tsx examples/test-error-handling.ts",
     "examples:utilities": "tsx examples/test-utilities.ts",
     "examples:lazy": "tsx examples/test-lazy-evaluation.ts",
-    "examples:all": "npm run examples:basic && npm run examples:errors && npm run examples:utilities && npm run examples:lazy"
+    "examples:async": "tsx examples/test-async-pipeAsync.ts",
+    "examples:all": "npm run examples:basic && npm run examples:errors && npm run examples:utilities && npm run examples:lazy && npm run examples:async"
   },
   "keywords": [
     "pipeline",
@@ -46,8 +59,11 @@
   "homepage": "https://github.com/oharu121/gluify#readme",
   "devDependencies": {
     "@types/node": "^22.0.0",
+    "@vitest/coverage-v8": "^4.0.8",
+    "@vitest/ui": "^4.0.8",
+    "tsx": "^4.0.0",
     "typescript": "^5.6.0",
-    "tsx": "^4.0.0"
+    "vitest": "^4.0.8"
   },
   "engines": {
     "node": ">=14.0.0"
